--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* :root {
+:root {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-weight: 400;
@@ -19,16 +19,9 @@ a {
     color: #646cff;
     text-decoration: inherit;
 }
+
 a:hover {
     color: #535bf2;
-}
-
-body {
-    margin: 0;
-    display: flex;
-    place-items: center;
-    min-width: 320px;
-    min-height: 100vh;
 }
 
 h1 {
@@ -66,4 +59,4 @@ button:focus-visible {
     button {
         background-color: #f9f9f9;
     }
-} */
+}
