Added moves to card as well as some styling. Also edited capFirstLetter function to capitalize the letter after a hyphen

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,18 @@
 }
 
 /* PokemonCard.jsx */
+.card {
+    text-align: center;
+}
+
 .card-button {
     margin: 10px;
 }
+
+.row {
+    display: flex;
+  }
+  
+  .column {
+    flex: 50%;
+  }
