--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+    margin-top: 2%;
 }
 
 /* PokemonCard.jsx */
